Web Inspector: Make alignment editor accessible https://bugs.webkit.org/show_bug.cgi?id=235395 <rdar://problem/87851989>
Reviewed by Patrick Angle.

Make alignment editor icons focusable, and annotate elements so VoiceOver could correctly read what is selected.

* UserInterface/Views/AlignmentEditor.css:
(.alignment-editor .glyph:focus):
(.alignment-editor .glyph:not(:focus-visible)):
* UserInterface/Views/AlignmentEditor.js:
(WI.AlignmentEditor):
(WI.AlignmentEditor.prototype.set alignment):
(WI.AlignmentEditor.prototype._removePreviouslySelected):
(WI.AlignmentEditor.prototype._updateSelected):



Canonical link: https://commits.webkit.org/246282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288385 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/AlignmentEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/AlignmentEditor.css
@@ -56,3 +56,7 @@
 .alignment-editor .glyph.rotate-left > svg {
     rotate: -90deg;
 }
+
+.alignment-editor .glyph:focus {
+    outline-offset: var(--focus-ring-outline-offset);
+}
